fixed some alignment issues and made buttons bigger

--- a/src/assets/sass/blog-list.sass
+++ b/src/assets/sass/blog-list.sass
@@ -3,19 +3,19 @@
     margin: 0 auto
     position: relative
     display: grid
-    justify-content: center
-    align-items: center
+    // justify-content: center
+    // align-items: center
     grid-template-columns: repeat(auto-fit, 100%)
     grid-template-rows: auto
     column-gap: 4px
 
 .load-more
-    height: 40px
-    width: 100%
-    max-width: 290px
-    margin: 12px 6px
+    height: 60px
+    width: 96%
+    margin: 12px 18px 12px 18px
     background-color: black
     color: white
+    font-size: 1.5em
     font-family: playfair-black
     font-weight: bold
     text-transform: uppercase
