--- a/src/assets/sass/footer.sass
+++ b/src/assets/sass/footer.sass
@@ -17,12 +17,11 @@
 
 .footer-subscribe-button
     background-color: whitesmoke
-    max-width: 290px
-    width: 100%
-    margin: 0 6px
-    height: 40px
+    width: 95%
+    height: 60px
     font-family: playfair-black
     font-weight: bold
+    font-size: 1.5em
     text-transform: uppercase
     color: black
     border: none
