--- a/src/assets/sass/subscribe.sass
+++ b/src/assets/sass/subscribe.sass
@@ -5,7 +5,6 @@
     padding: 12px 18px
     display: flex
     flex-direction: column
-    align-items: center
     justify-content: center
 
 .subscribe-title
@@ -15,6 +14,7 @@
     text-decoration: none
     line-height: 1.1
     text-transform: uppercase
+    text-align: left
 
 .subscribe-description
     font-family: playfair-regular
@@ -25,12 +25,12 @@
     font-size: 1em
 
 .subscribe-button
-    height: 40px
-    max-width: 296px
+    height: 60px
     width: 100%
     margin: 12px 0 0 0
     background-color: black
     color: white
+    font-size: 1.5em
     font-family: playfair-black
     font-weight: bold
     text-transform: uppercase
